--- a/src/pages/Labs/Lab1.mdx
+++ b/src/pages/Labs/Lab1.mdx
@@ -12,15 +12,15 @@ Launch the Sandbox Instana Portal from the browser: https://sandbox-partner.inst
 
 Your screen will look like this: 
 
-![Large blocky illustration](/images/1.2.png)
+![Large blocky illustration](images/1.2.png)
 
 ## Step 2:
 
-![Large blocky illustration](/images/1.3.png)
+![Large blocky illustration](images/1.3.png)
 
 ## Step 3:
 
-![Large blocky illustration](/images/1.4.png)
+![Large blocky illustration](images/1.4.png)
 
 ## Step 4:
 
@@ -33,7 +33,7 @@ ssh ubuntu@<IP address>
 Paste the CURL statement that you copied in the last step into your terminal window and hit enter. 
 You should see a screen that will look similar to the one below. Please enter “y” and hit enter. This will  start the installation process.
 
-![Large blocky illustration](/images/1.5.png)
+![Large blocky illustration](images/1.5.png)
 
 ## Step 5:
 
@@ -53,6 +53,6 @@ In this scenario, we will use DFQ to filter on our host using:
 entity.host.name:<your host name> 
 ```
 
-![Large blocky illustration](/images/1.7.png)
+![Large blocky illustration](images/1.7.png)
 
 If you see your host in the map, you have validated that the installation was successful. 
