--- a/src/pages/Labs/Lab2.mdx
+++ b/src/pages/Labs/Lab2.mdx
@@ -33,7 +33,7 @@ sudo service instana-agent status
 
 Hint: type “q” to exit status command.
 
-![Screenshot1](/images/2.3.png)
+![Screenshot1](images/2.3.png)
 
 ## Step 3:
 
@@ -61,12 +61,12 @@ Note that a list of common vi commands are provided towards the end of this Lab 
 sudo vi org.ops4j.pax.logging.cfg
 ```
 
-![Screenshot2](/images/2.2.png)
+![Screenshot2](images/2.2.png)
 
 Now, change from INFO to DEBUG on the line seen below.
 Check out vi commands if you are experiencing an issue.
 
-![Screenshot3](/images/2.1.png)
+![Screenshot3](images/2.1.png)
 
 Once you have modified with the proper value, save your work.
 
