--- a/src/pages/Labs/Lab3.mdx
+++ b/src/pages/Labs/Lab3.mdx
@@ -5,7 +5,7 @@ Custom Tabs – enable searching and filtering of tags in the UI
 
 Custom Zone – where hosts are grouped into zones on the infrastructure map
 
-![Large blocky illustration](/images/3.1.png)
+![Large blocky illustration](images/3.1.png)
 
 ## Step 1:
 
@@ -28,7 +28,7 @@ sudo cp configuration.yaml configuration-custom.yaml
 ## Step 3:
 Using the vi commands, look for the following sections within the configuration-custom.yaml file and make the following changes: 
 
-![Large blocky illustration](/images/3.2.png)
+![Large blocky illustration](images/3.2.png)
 
 Note: 
 
@@ -43,7 +43,7 @@ Once these values have been modified, please save your work.
 Validate that your work was successful by viewing your host in the Instana UI. 
 Click on your host on the Infrastructure map and it will bring up details: 
 
-![Large blocky illustration](/images/3.3.png)
+![Large blocky illustration](images/3.3.png)
 
 
 
