--- a/src/pages/Labs/Lab4.mdx
+++ b/src/pages/Labs/Lab4.mdx
@@ -30,7 +30,7 @@ http://(publicip):8080
 
 If successful, you will see the following page:
 
-![Screenshot1](/images/4.1.png)
+![Screenshot1](images/4.1.png)
 
 Feel free to navigate around and buy some robots!
 
@@ -40,15 +40,15 @@ Find your host in the Instana UI on the Infrastructure screen.
 
 Hover your mouse over the host and notice all the entities being shown.
 
-![Screenshot2](/images/4.2.png)
+![Screenshot2](images/4.2.png)
 
 Open the host dashboard and see all of the components of Robot Shop visible.
 
 Click on a few of them to open their respective dashboards and find the metrics streaming in automatically.
 
-![Screenshot3](/images/4.3.png)
+![Screenshot3](images/4.3.png)
 
-![Screenshot4](/images/4.4.png)
+![Screenshot4](images/4.4.png)
 
 ## Step 5:
 
@@ -72,6 +72,6 @@ Execute the following command to confirm that the loadgen container is running:
 docker ps | grep loadgen
 ```
 
-![Screenshot5](/images/4.5.png)
+![Screenshot5](images/4.5.png)
 
 We will move on for now, but we will find the robot shop data in the Instana UI a little later in the training.
