--- a/src/pages/Labs/Lab5.mdx
+++ b/src/pages/Labs/Lab5.mdx
@@ -5,7 +5,7 @@ The search bar has extensive abilities to search using fuzzy and wildcard search
 ## Step 1:
 Navigate to the Infrastructure screen in the UI.
 
-![Large blocky illustration](/images/5.1.png)
+![Large blocky illustration](images/5.1.png)
 
 ## Step 2:
 
