--- a/src/pages/Labs/Lab7.mdx
+++ b/src/pages/Labs/Lab7.mdx
@@ -62,4 +62,4 @@ In the UI, find your service in your Application Perspective and verify the new 
 
 Click Application, then Services, and lastly verify the name. 
 
-![Large blocky illustration](/images/7.1.png)
+![Large blocky illustration](images/7.1.png)
