--- a/src/pages/Labs/Lab8.mdx
+++ b/src/pages/Labs/Lab8.mdx
@@ -9,13 +9,13 @@ Then, Navigate to the Endpoints tab.
 
 Click on the Configure Endpoints link.
 
-![Screenshot1](/images/8.1.png)
+![Screenshot1](images/8.1.png)
 
 ## Step 2:
 
 Click on the Add Custom HTTP Rule link.
 
-![Screenshot2](/images/8.2.png)
+![Screenshot2](images/8.2.png)
 
 ## Step 3:
 
@@ -29,12 +29,12 @@ Feel free to use the Rule tester (copy an actual call from the data to the teste
 
 Then, select save.
 
-![Screenshot3](/images/8.3.png)
+![Screenshot3](images/8.3.png)
 
 ## Step 4:
 
 Select Add.
 
-![Screenshot4](/images/8.4.png)
+![Screenshot4](images/8.4.png)
 
 And then verify that you see the new endpoint on the dashboard.
