--- a/src/pages/Labs/Lab9.mdx
+++ b/src/pages/Labs/Lab9.mdx
@@ -9,7 +9,7 @@ Then click Events.
 
 Lastly, click New Events. 
 
-![Large blocky illustration](/images/9.1.png)
+![Large blocky illustration](images/9.1.png)
 
 ## Step 2:
 
@@ -46,7 +46,7 @@ Select 1 min in the Offline for drop down.
 
 Select your Application Perspective for the Scope. 
 
-![Large blocky illustration](/images/9.2.png)
+![Large blocky illustration](images/9.2.png)
 
 Step 4: 
 
@@ -68,5 +68,5 @@ Select Issues.
 
 Review Event. 
 
-![Large blocky illustration](/images/9.3.png)
+![Large blocky illustration](images/9.3.png)
 
