--- a/src/pages/SalesEnablement/sales.mdx
+++ b/src/pages/SalesEnablement/sales.mdx
@@ -8,7 +8,7 @@
 >
 
 
-![Dark article layout mockup](/images/Roadmap.png)
+![Dark article layout mockup](images/Roadmap.png)
 
 </ArticleCard>
 </Column>
@@ -20,7 +20,7 @@
 >
 
 
-![Dark article layout mockup](/images/Pricing.png)
+![Dark article layout mockup](images/Pricing.png)
 
 
 </ArticleCard>
