--- a/src/pages/Labs/Lab6.mdx
+++ b/src/pages/Labs/Lab6.mdx
@@ -6,7 +6,7 @@ services they are interested in. Alerts, errors, and logs are scoped to an AP to
 
 Click on the STAN icon
 
-![Screenshot1](/images/6.1.png)
+![Screenshot1](images/6.1.png)
 
 For the purposes of this lab, we will be utilizing the tags that we created in the previous labs. You will 
 remember creating a tag called <Student=LAST NAME>. We will be utilizing this tag to create an Application Perspective.
@@ -15,7 +15,7 @@ remember creating a tag called <Student=LAST NAME>. We will be utilizing this ta
 
 Click the New Application Perspective to create a new AP
 
-![Screenshot2](/images/6.2.png)
+![Screenshot2](images/6.2.png)
 
 ## Step 3:
 
@@ -23,7 +23,7 @@ Select Custom Tags.
 
 Then click Next.
 
-![Screenshot3](/images/6.3.png)
+![Screenshot3](images/6.3.png)
 
 ## Step 4:
 
@@ -35,7 +35,7 @@ Please notice the preview that is displayed. This will give us validation that o
 
 Click Next.
 
-![Screenshot4](/images/6.4.png)
+![Screenshot4](images/6.4.png)
 
 ## Step 5:
 
@@ -45,7 +45,7 @@ Select All Calls.
 
 Click Create.
 
-![Screenshot5](/images/6.5.png) 
+![Screenshot5](images/6.5.png) 
 
 ## Step 6:
 
@@ -57,5 +57,5 @@ Make sure to turn on Live mode.
 
 Verify that the new Application Perspective is listed.
 
-![Screenshot6](/images/6.6.png)
+![Screenshot6](images/6.6.png)
 
